# internship_c_dataset_2

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
docs/: CRIPS-DM flowchart_dataset2.drawio.html  Makefile  conf.py  index.rst  make.bat
models/: adaboost.joblib  logistic-regression.joblib  resampled_data.joblib  scaler.joblib  smote.joblib  xgboostclassifier.joblib
notebooks/: 1_preprocess_data.ipynb  2_baseline.ipynb  3_logistic-regression.ipynb  4_xgxboost.ipynb  5_adaboost.ipynb
src/data/: data_preprocessing.py
