[tool.poetry]
name = "internship-c-dataset-2"
version = "0.1.0"
description = ""
authors = ["chuannarongvat <narongvat.chingpayakmon@student.uts.edu.au>"]
readme = "README.md"
packages = [{include = "internship_c_dataset_2"}]

[tool.poetry.dependencies]
python = "3.9.13"
pandas = "2.0.1"
jupyterlab = "3.6.3"
scikit-learn = "1.2.2"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
imblearn = "^0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"